--- a/app/views/games/_player_stats.html.haml
+++ b/app/views/games/_player_stats.html.haml
@@ -7,6 +7,12 @@
       - team.sport.player_stat_fields.each do |field, attributes|
         %th= attributes[:abbr]
 
+  %tfoot
+    %tr.totals
+      %th{ scope: 'row' } Totals
+      - (1..(team.sport.player_stat_fields).count).each do
+        %td
+
   %tbody
     - team.player_game_stats(game).each do |player_game_stat|
       = render 'games/player_game_stat',
