--- a/app/views/games/edit.html.haml
+++ b/app/views/games/edit.html.haml
@@ -18,7 +18,7 @@
 
           = f.input :neutral_site, as: :boolean
 
-          %div
+          .date
             = f.input :date, as: :string, required: false
 
         #sport_fields
