--- a/app/views/games/_form.html.haml
+++ b/app/views/games/_form.html.haml
@@ -1,6 +1,8 @@
 = field_set_tag 'Player Stats' do
-  = render 'games/form/player_stats', game: game, team: game.team
-  = render 'games/form/player_stats', game: game, team: game.opponent
+  - [game.team, game.opponent].each do |team|
+    %h2= team.display_name
+    - team.sport.player_stat_groups.each do |player_stat_group|
+      = render 'games/form/player_stat_group', game: game, team: team, player_stat_group: player_stat_group
 
 = field_set_tag 'Game Stats' do
   %table.game-stats
