--- a/app/views/games/form/_player_stat_group.html.haml
+++ b/app/views/games/form/_player_stat_group.html.haml
@@ -1,10 +1,11 @@
 %table.player-stats
-  %caption= team.display_name
+  - if player_stat_group.name.present?
+    %caption= player_stat_group.name
 
   %thead
     %tr
       %th Player
-      - team.sport.player_stat_fields.each do |field, attributes|
+      - player_stat_group.player_stat_fields.each do |field, attributes|
         %th= attributes[:abbr]
 
   %tbody
@@ -12,7 +13,9 @@
       - (team.player_game_stats(game) + [PlayerGameStat.new]).each do |player_game_stat|
         = game_fields.fields_for :player_game_stats, player_game_stat, child_index: child_index(player_game_stat) do |player_game_stat_fields|
           = player_game_stat_fields.fields_for :stats, player_game_stat do |stats|
+            = stats.hidden_field :player_stat_group, value: player_stat_group.id
             = render 'games/form/player_game_stat_fields',
                 player_game_stat_fields: player_game_stat_fields,
                 stats_fields: stats,
+                player_stat_group: player_stat_group,
                 team: team
