fix edit form js initialization

--- a/app/views/games/edit.html.haml
+++ b/app/views/games/edit.html.haml
@@ -33,5 +33,5 @@
 
 :javascript
   $(function() {
-    new BoxScore.Games($('form#edit_game'));
+    new BoxScore.Games($('form.edit_game'));
   });
