--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -27,8 +27,9 @@
                 Welcome, #{current_admin.name}
                 = link_to 'Sign out', destroy_admin_session_path, method: :delete, id: 'logout'
               - else
-                = link_to 'Admin Sign In', new_admin_session_path, id: 'login'
+                = link_to 'Admin sign in', new_admin_session_path, id: 'login'
               = link_to 'About us', '/about-us'
+              = link_to 'Add your school', '#', class: 'account-request'
 
     .row
       #content.twelve.columns
@@ -44,7 +45,7 @@
               %dd= link_to 'Softball', girls_softball_path
 
         -if admin_signed_in?
-          = render partial: 'shared/admin_menu'
+          = render 'shared/admin_menu'
 
         .row
           = yield
@@ -56,4 +57,6 @@
           %ul
             %li= link_to 'Terms of Service', '/terms-of-service'
             %li= link_to 'Privacy Policy', '/privacy-policy'
+
+  = render 'shared/request_form'
 
