--- a/app/views/schools/show.html.haml
+++ b/app/views/schools/show.html.haml
@@ -1,6 +1,9 @@
 %h1= @school.name
 
 #main.twelve.columns
+  - if can?(:manage, @school)
+    = link_to 'Edit Profile', edit_school_path(@school), class: 'small button edit-profile'
+
   .info.twelve.columns
     .row
       .twelve.columns.basic-info
