--- a/app/views/pages/terms_of_service.html.haml
+++ b/app/views/pages/terms_of_service.html.haml
@@ -4,17 +4,17 @@
   :markdown
     ##General
 
-    HS Box Scores NYC, LLC ("HS Box Scores NYC" "we" or "us") thanks you for visiting this website.  By using this website, you agree to these Terms of Service and to use this website in accordance with these Terms of Service, our Privacy Policy, and any additional terms or conditions that are referenced herein or that otherwise may apply to specific sections of this website or the services that we make available through this website, all of which are deemed part of these Terms of Service.  
+    HS Box Scores NYC, LLC ("HS Box Scores NYC" "we" or "us") thanks you for visiting this website.  By using this website, you agree to these Terms of Service and to use this website in accordance with these Terms of Service, our Privacy Policy, and any additional terms or conditions that are referenced herein or that otherwise may apply to specific sections of this website or the services that we make available through this website, all of which are deemed part of these Terms of Service.
 
     We may change these Terms of Service or impose new conditions on the use of this website from time to time in our sole discretion.  In that event, we will post the revised Terms of Service on this website and change the "Last Updated" date to reflect the effective date of such changes.  By using this website after we post any such changes, you accept the Terms of Service as so modified.
 
-    We may deny access to this website or any of its features to anyone who we determine infringes on the rights of HS Box Scores NYC or any other party or who otherwise violates these Terms of Service.  
+    We may deny access to this website or any of its features to anyone who we determine infringes on the rights of HS Box Scores NYC or any other party or who otherwise violates these Terms of Service.
 
     ##Limited Right of Use
 
-    This website and all of the materials available on this website are the property of HS Box Scores NYC and are protected by copyright, trademark and other intellectual property laws.  This website is provided solely for informational noncommercial use and is not intended for any other use.  You expressly assume all risk for your use of this website and your use of any materials or services made available through this website.  
+    This website and all of the materials available on this website are the property of HS Box Scores NYC and are protected by copyright, trademark and other intellectual property laws.  This website is provided solely for informational noncommercial use and is not intended for any other use.  You expressly assume all risk for your use of this website and your use of any materials or services made available through this website.
 
-    You may not use this website or any materials or services made available on this website in any manner that constitutes an infringement of our rights or that has not been authorized by us.  Except as expressly authorized in these Terms of Service, you may not modify, copy, reproduce, republish, upload, post, transmit or distribute in any manner or medium (electronically or otherwise) any materials from this website.  You may, however, from time to time, forward reported box score and other statistical data in the manner provided for on this website, provided that you keep intact all copyright, trademark and other proprietary notices.  For information about requesting permission to otherwise reproduce or distribute materials from this website, please contact us at (212)-330-7681 or info@hsboxscoresnyc.com.  
+    You may not use this website or any materials or services made available on this website in any manner that constitutes an infringement of our rights or that has not been authorized by us.  Except as expressly authorized in these Terms of Service, you may not modify, copy, reproduce, republish, upload, post, transmit or distribute in any manner or medium (electronically or otherwise) any materials from this website.  You may, however, from time to time, forward reported box score and other statistical data in the manner provided for on this website, provided that you keep intact all copyright, trademark and other proprietary notices.  For information about requesting permission to otherwise reproduce or distribute materials from this website, please contact us at (212)-330-7681 or info@hsboxscoresnyc.com.
 
     You may not modify, reverse-engineer, decompile, disassemble or otherwise reduce or attempt to reduce to a human-perceivable form any of the source code used by us or our licensors in providing this website.
 
@@ -42,7 +42,7 @@
 
     ##Limitation of Liability
 
-    UNDER NO CIRCUMSTANCES, INCLUDING, BUT NOT LIMITED TO, NEGLIGENCE, WILL WE OR ANY OF OUR ASSOCIATED PERSONS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL OR CONSEQUENTIAL DAMAGES THAT RESULT FROM THE USE OF, OR THE INABILITY TO USE, THIS WEBSITE, INCLUDING ITS MATERIALS OR SERVICES, OR ANY MATERIALS OR SERVICES MADE AVAILABLE THROUGH THIS WEBSITE BY US OR BY THIRD PARTIES.  
+    UNDER NO CIRCUMSTANCES, INCLUDING, BUT NOT LIMITED TO, NEGLIGENCE, WILL WE OR ANY OF OUR ASSOCIATED PERSONS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL OR CONSEQUENTIAL DAMAGES THAT RESULT FROM THE USE OF, OR THE INABILITY TO USE, THIS WEBSITE, INCLUDING ITS MATERIALS OR SERVICES, OR ANY MATERIALS OR SERVICES MADE AVAILABLE THROUGH THIS WEBSITE BY US OR BY THIRD PARTIES.
 
     YOU EXPRESSLY ACKNOWLEDGE AND AGREE THAT NEITHER HS BOX SCORES NYC NOR ANY OF ITS ASSOCIATED PERSONS SHALL BE LIABLE FOR ANY MATERIAL THAT IS OR IS ALLEGED TO BE DEFAMATORY, DISPARAGING OR OTHERWISE OFFENSIVE.  IF YOU ARE DISSATISFIED WITH THIS WEBSITE OR ANY MATERIALS OR SERVICES PROVIDED ON THIS WEBSITE, OR ANY OF THESE TERMS OF SERVICES, YOUR SOLE AND EXCLUSIVE REMEDY IS TO DISCONTINUE USE OF THIS WEBSITE.
 
@@ -52,7 +52,7 @@
 
     Throughout this website, we may provide links and pointers to Internet websites maintained by third parties.  Any such linking to a third-party site does not imply an endorsement or sponsorship of such website, or the information, products or services offered on or through such website.  In addition, we do not operate or control in any respect any information, products or services that third parties may provide on or through any such website.
 
-    This website may (now or in the future) offer the ability to purchase one or more products or services offered by third parties.  You agree not to make any purchases for speculative, false or fraudulent purposes or for the purpose of anticipating demand for a particular product or service.  
+    This website may (now or in the future) offer the ability to purchase one or more products or services offered by third parties.  You agree not to make any purchases for speculative, false or fraudulent purposes or for the purpose of anticipating demand for a particular product or service.
 
     We are not responsible for the quality, accuracy, timeliness, reliability or any other aspect of products and services that are provided by third party merchants.  If you make a purchase from a third party on a third-party website that you have accessed via a link on this website, the information obtained during your visit to that third party’s online store or website, and the information that you provide as part of that transaction, such as your credit card number and contact information, may be collected by the third party merchant.  Such third party merchant may have privacy and data collection policies that are different from ours.  We have no responsibility or liability for these independent policies.  In addition, when you purchase products or services on or through the website of a third party merchant, you may be subject to additional terms and conditions that specifically apply to your purchase or use of such products or services.  For more information regarding a third party merchant, its online store, its privacy policies, and/or any additional terms and conditions that may apply, visit that merchant’s website and click on its information links or contact the third party merchant directly.  You hereby release us and each of our officers, managers, members, employees, agents, representatives, contractors, service providers and licensors (our "Associated Persons") from any damages that you incur, and you agree not to assert any claim against us or any of our Associated Persons arising from your purchase or use of any products or services made available by third parties through this website.
 
@@ -60,13 +60,13 @@
 
     ##Indemnification
 
-    You agree to indemnify and hold harmless us and each of our Associated Persons from and against any and all losses, expenses, damages and costs, including reasonable attorneys’ fees, that arise out of your use of this website and/or any violation of these Terms of Service by you. 
+    You agree to indemnify and hold harmless us and each of our Associated Persons from and against any and all losses, expenses, damages and costs, including reasonable attorneys’ fees, that arise out of your use of this website and/or any violation of these Terms of Service by you.
 
     ##Other
 
     These Terms of Service constitute the entire agreement between us and you with respect to the subject matter contained herein and supersedes all previous and contemporaneous agreements, proposals and communications, written or oral.  You may also be subject to additional terms and conditions that may apply when you use the products or services of a third party that are provided through this website.  In the event of any conflict between any such third-party terms and conditions and these Terms of Service, these Terms of Service will govern.  These Terms of Service shall be governed by and construed in accordance with the laws of the State of New York, without giving effect to any principles of conflicts of law.
 
-    These Terms of Service are personal to you and you may not assign them to anyone.  If any provision included in these Terms of Service is found to be unlawful, void or for any reason unenforceable, then such provision shall be deemed severable from these Terms of Service and will not affect the validity and enforceability of the remaining provisions.  These Terms of Service are not intended to benefit any third party (except for our Associated Persons), and, except with respect to the Associated Persons as set forth herein, do not create any third party beneficiaries. 
+    These Terms of Service are personal to you and you may not assign them to anyone.  If any provision included in these Terms of Service is found to be unlawful, void or for any reason unenforceable, then such provision shall be deemed severable from these Terms of Service and will not affect the validity and enforceability of the remaining provisions.  These Terms of Service are not intended to benefit any third party (except for our Associated Persons), and, except with respect to the Associated Persons as set forth herein, do not create any third party beneficiaries.
 
     ##Additional Terms Applicable to School Personnel
 
@@ -76,9 +76,9 @@
 
     When you submit any data through this website, you acknowledge and agree that:
 
-    1. You have granted to us and anyone authorized by us, a royalty-free, perpetual, irrevocable, non-exclusive unrestricted worldwide license to use, copy, modify, transmit, sell, exploit, create derivative works from, distribute and/or publicly display such material, in whole or in part, in any material or medium (whether now known or hereafter developed), for any purpose that we choose, any and all materials that you submit through this website, without compensation to you or any school or organization associated with you.  
+    1. You have granted to us and anyone authorized by us, a royalty-free, perpetual, irrevocable, non-exclusive unrestricted worldwide license to use, copy, modify, transmit, sell, exploit, create derivative works from, distribute and/or publicly display such material, in whole or in part, in any material or medium (whether now known or hereafter developed), for any purpose that we choose, any and all materials that you submit through this website, without compensation to you or any school or organization associated with you.
 
-    2. The license referred to in paragraph 1 above includes the right to exploit any proprietary rights in such submission, including, but not limited to, rights under copyright, trademark or patent laws that exist in any relevant jurisdiction.  
+    2. The license referred to in paragraph 1 above includes the right to exploit any proprietary rights in such submission, including, but not limited to, rights under copyright, trademark or patent laws that exist in any relevant jurisdiction.
 
     3. The technical processing and transmission of this website, including material submitted by you, may involve transmission over various networks, and may involve changes to the content to conform and adapt it to technical requirements of connecting networks and devices.
 
@@ -94,10 +94,12 @@
 
     To submit information to this website, you will need to maintain a username and password.  We reserve the right to reject or terminate the use of any password that we deem offensive or inappropriate.
 
-    You are responsible for maintaining the confidentiality of your password and are responsible for all activities (whether by you or by others) that occur under your username and password.  To protect against unauthorized access, be sure to log out when you finish submitting information to this website.  Do not disclose your password to any third party.  If you believe your username or password has been compromised for any reason, you should immediately change your password by logging in and accessing the "Change Password" feature.  
+    You are responsible for maintaining the confidentiality of your password and are responsible for all activities (whether by you or by others) that occur under your username and password.  To protect against unauthorized access, be sure to log out when you finish submitting information to this website.  Do not disclose your password to any third party.  If you believe your username or password has been compromised for any reason, you should immediately change your password by logging in and accessing the "Change Password" feature.
 
     You agree to notify us immediately of any unauthorized use of your username or password or any other breach of security.  We cannot and will not be liable for any loss or damage arising from your failure to protect your password.
 
     _Suspension and Termination of Access_
 
     You agree that, in our sole discretion, we may suspend or terminate your username, password or your ability to submit information to this website, and remove and discard any materials that you submit to this website, at any time, for any reason, without notice.  You agree that neither HS Box Scores NYC nor any of its Associated Persons will be liable to you or to any third-party for any suspension or termination of your password or username or your use of all or any portion of this website, or any removal of any materials that you have submitted to this website.  In the event that we suspend or terminate your access, you will continue to be bound by these Terms of Service as in effect as of the date of such suspension or termination.
+
+    [Privacy Policy](/privacy-policy)
