Update link color to match lighter logo
Changed scores nav text color

--- a/app/assets/stylesheets/base/_colors.scss
+++ b/app/assets/stylesheets/base/_colors.scss
@@ -1,4 +1,4 @@
-$action-color: #e67625;
+$action-color: #FF9300;
 $alternate-link-color: #84D1DA;
 $alert-color: #9b2638;
 $body-background-color: #002e40;
