--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -11,7 +11,7 @@
 
 // Colors Settings
 
-$mainColor: #e67625;
+$mainColor: #FF9300;
 // $mainColor: #2ba6cb;
 // $secondaryColor: #e9e9e9;
 // $alertColor: #c60f13;
