--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -201,7 +201,7 @@ nav.global {
       border: 1px solid $black;
       border-left: 1px solid #707070;
       padding: 13px 0;
-      color: $alternate-link-color;
+      color: $action-color;
       background: image_url('gradient-gray-nav.png') repeat-x;
       text-align: center;
 
