--- a/app/views/shared/_recent_scores.html.haml
+++ b/app/views/shared/_recent_scores.html.haml
@@ -23,6 +23,9 @@
           %span= link_to 'Share on Twitter',
             "http://twitter.com/home/?status=#{CGI::escape(twitter_box_score_message(game.team, game.opponent, game.date, game_url(game)))}",
             class: 'twitter', data: { lang: 'en' }, target: '_blank'
+          %span= link_to 'Share via email', "mailto:?subject=#{box_score_email_link(game)}",
+            class: 'email', target: '_blank'
+
 - else
   .row
     .twelve.columns
