Fixed blank date fields error on filter
Correctly, this time.

--- a/app/views/shared/_filter_form.html.haml
+++ b/app/views/shared/_filter_form.html.haml
@@ -15,8 +15,8 @@
       label_method: :display_name, required: false, label: false,
       input_html: { class: 'chzn-select', data: { placeholder: 'School' } }
 
-    = f.input :earliest_date, as: :string, required: false,
-      label: false, input_html: { class: 'date' }
+    = f.input :earliest_date, as: :string, required: false, label: false,
+      input_html: { class: 'date' }
 
     %span.to to
 
