--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -258,13 +258,20 @@ nav.admin-menu {
   background: #fff;
   @include single-box-shadow(rgba(#333, 0.3), 3px, 3px, 3px);
 
-  h2, h3 {
+  h1, h2, h3 {
     color: $black;
   }
 
-  h2 {
+  h1 {
     margin: 40px 0 20px;
+  }
+
+  h2 {
     font-size: 20px;
+  }
+
+  [class*="column"] + [class*="column"]:last-child {
+    float: left;
   }
 }
 
