--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -9,8 +9,11 @@
 #main.twelve.columns
   = render 'shared/filter_form'
 
-  %section#recent-scores
-    = render 'shared/recent_scores', games: @games
+  - GamesGrouping.new(@filter).each do |sport, games_on_date|
+    %h1= sport.name
+    - games_on_date.each do |date, games|
+      %section#recent-scores
+        = render 'shared/recent_scores', games: games, title: date.stamp("Friday, June 29, 1981")
 
 :javascript
   $(function() {
