--- a/app/views/games/_team_stats.html.haml
+++ b/app/views/games/_team_stats.html.haml
@@ -3,8 +3,7 @@
   %th{ scope: 'row' }= link_to team.school.name, team.school
 
   - (1..game.stats.periods).each do |period|
-    %td
-      = stats.points(period)
+    %td= stats.points(period)
 
   %td
     %strong= stats.final
