--- a/app/views/games/_team_summary.html.haml
+++ b/app/views/games/_team_summary.html.haml
@@ -3,4 +3,4 @@
   %th{ scope: 'row' }= team.school.name
 
   - game.sport.summary_stats.each do |stat, attributes|
-    %td= stats.send(stat)
+    %td{ class: stat }= stats.send(stat)
