--- a/app/views/games/form/_player_game_stat_fields.html.haml
+++ b/app/views/games/form/_player_game_stat_fields.html.haml
@@ -3,5 +3,7 @@
     = player_game_stat_fields.collection_select :player_id, team.players,
         :id, :name, { include_blank: true }, class: 'player'
 
+    = stats_fields.hidden_field :player_stat_group, value: player_stat_group.id
+
   - player_stat_group.player_stat_fields.each do |field, attributes|
     %td= stats_fields.text_field(field, attributes[:input_html] || {})
