--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -36,8 +36,10 @@
         = render 'team_stats', game: @game, team: @game.home_team
 
   %section#player-stats
-    = render 'player_stats', game: @game, team: @game.away_team
-    = render 'player_stats', game: @game, team: @game.home_team
+    - [@game.away_team, @game.home_team].each do |team|
+      %h2= team.display_name
+      - team.sport.player_stat_groups.each do |player_stat_group|
+        = render 'games/player_stat_group', game: @game, team: team, player_stat_group: player_stat_group
 
 :javascript
   $(function(){
