--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -2,12 +2,12 @@
 
 #main.twelve.columns
   :markdown
-    Through this website, HS Box Scores NYC is providing a dedicated platform to display score data and other statistical information for varsity high school basketball, baseball and softball games in the New York City area, all at no cost to the schools, student-athletes or website visitors.
+    Through this website, HS Box Scores NYC is providing a dedicated platform to display score data and other statistical information for varsity high school basketball, baseball and softball games played in New York City, all at no cost to the schools, student-athletes or website visitors.  
 
-    The mission of HS Box Scores NYC is very similar to the mission of Henry Chadwick when he invented the box score right here in New York City back in 1863: to increase the interest in the games played.  HS Box Scores NYC will provide each school, coach, student-athlete, as well as friends, family and the media, with the ability to closely follow the results of all varsity basketball, baseball and softball games in NYC.  We also believe that our website will promote interest from colleges recruiting student-athletes in these sports.
+    The mission of HS Box Scores NYC is very similar to the mission of Henry Chadwick when he invented the box score in NYC back in 1863: to promote interest in the games played.  HS Box Scores NYC will provide each school, coach and student-athlete, as well as friends, family and the media, with an opportunity to track and share the results of NYC varsity basketball, baseball and softball games.  In addition, we expect that widespread participation in this website will boost college recruitment of NYC’s student-athletes competing in these sports.  
 
-    Participation in this website is available to all high schools in New York City with varsity teams that compete in basketball, baseball and softball.  We encourage all of these schools - public and private, large and small - to take advantage of this free service by promptly and consistently reporting score information and the related statistics through our user-friendly password protected data entry tool.
+    Participation in this website is available to all high schools in NYC with varsity teams that compete in basketball, baseball or softball.  We encourage all of these schools (public and private &ndash; large and small) to take advantage of our free service by promptly and consistently reporting score information and the related statistics through our user-friendly password protected data entry tool.
 
-    We hope that HS Box Scores NYC will help bolster the attraction and following of varsity basketball, baseball and softball in New York City and we are excited about the opportunity to expand the focus on New York City’s high school student-athletes.
+    We hope you enjoy this website and we are excited about the opportunity to expand the focus on varsity high school basketball, baseball and softball in NYC.
 
-    _HS Box Scores NYC is an independent company that is not sponsored by or affiliated with any college, high school, AAU program, coaching association or media company._
+    **_HS Box Scores NYC, LLC is an independent company that is not sponsored by or affiliated with any college, high school, AAU program, coaching association or media company._**
