--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,7 +18,9 @@
       .row
         .eight.columns.offset-by-four
 
-          = link_to '@hsboxscoresnyc', 'http://twitter.com/hsboxscoresnyc', id: 'twitter-button'
+          #twitter-button
+            %p Follow us on Twitter
+            = link_to '@hsboxscoresnyc', 'http://twitter.com/hsboxscoresnyc'
 
           %nav.global
             %p
