Minor copy and color updates to app layout

--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -2,9 +2,9 @@
   %h1
     Welcome to
     %strong HS Box Scores NYC,
-    your source for all of NYC's
-    %strong high school basketball, baseball and softball scores.
-    Check the latest scores below and click on "Box Score" for game statistics.
+    your source for varsity
+    %strong high school basketball, baseball and softball scores
+    for NYC. Check the latest scores below and click on "Box Score" for game statistics.
 
 #main.twelve.columns
   = render 'shared/filter_form'
