--- a/app/views/games/_player_game_stat.html.haml
+++ b/app/views/games/_player_game_stat.html.haml
@@ -2,4 +2,9 @@
   %th{ scope: 'row' }= player_game_stat.player.name
 
   - player_stat_group.player_stat_fields.each do |field, attributes|
-    %td= player_game_stat.send(field)
+    %td
+      - if attributes[:type] == :checkbox
+        - if player_game_stat.send(field) == '1'
+          &#10003
+      - else
+        = player_game_stat.send(field)
