Updated scores nav link text color

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -218,7 +218,7 @@ nav.global {
       border: 1px solid $black;
       border-left: 1px solid #707070;
       padding: 13px 0;
-      color: $action-color;
+      color: #FEB254;
       background: image_url('gradient-gray-nav.png') repeat-x;
       text-align: center;
 
