Coming soon message edit

--- a/app/views/shared/_coming_soon_message.html.haml
+++ b/app/views/shared/_coming_soon_message.html.haml
@@ -4,5 +4,5 @@
 
   .content
     :markdown
-      Boys Baseball and Girls Softball seasons will start in the spring of 2013.
+      Boys Baseball and Girls Softball seasons will start in Spring of 2013.
       Please check back for those scores.
