Copy updates home / privacy policy / terms of service

--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -4,7 +4,7 @@
     %strong HS Box Scores NYC,
     your source for varsity
     %strong high school basketball, baseball and softball scores
-    in NYC. Check the latest scores below and click on "Box Score" for game statistics.
+    in NYC.
 
 #main.twelve.columns
   = render 'shared/filter_form'
