--- a/app/views/games/_team_stats.html.haml
+++ b/app/views/games/_team_stats.html.haml
@@ -2,8 +2,9 @@
 %tr{ class: winner_class(game, team) }
   %th{ scope: 'row' }= link_to team.school.name, team.school
 
-  - (1..game.stats.periods).each do |period|
-    %td= stats.points(period)
+  - game.stats.periods.each do |period|
+    %td
+      = stats.points(period)
 
   %td
     %strong= stats.final
