--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -36,15 +36,15 @@
     .row
       #content.twelve.columns
         .row
-          %nav#scores-nav.twelve.columns
+          %nav#scores-nav.twelve.columns{ class: params[:sport_id] }
             %dl.six.columns
               %dt Boys:
-              %dd= link_to 'Basketball', boys_basketball_path, class: 'first'
-              %dd= link_to 'Baseball', boys_baseball_path, class: 'disabled'
+              %dd.boys-basketball= link_to 'Basketball', boys_basketball_path, class: 'first'
+              %dd.boys-baseball= link_to 'Baseball', boys_baseball_path, class: 'disabled'
             %dl.six.columns
               %dt Girls:
-              %dd= link_to 'Basketball', girls_basketball_path, class: 'first'
-              %dd= link_to 'Softball', girls_softball_path, class: 'disabled'
+              %dd.girls-basketball= link_to 'Basketball', girls_basketball_path, class: 'first'
+              %dd.girls-softball= link_to 'Softball', girls_softball_path, class: 'disabled'
 
         -if admin_signed_in?
           = render 'shared/admin_menu'
