--- a/app/assets/stylesheets/schools.css.scss
+++ b/app/assets/stylesheets/schools.css.scss
@@ -48,11 +48,8 @@ body.box-score.schools {
         dd {
           font-size: 13px;
           text-align: center;
+          line-height: 1.2em;
         }
-      }
-
-      h2 {
-        margin: 10px 0 3px;
       }
 
       table {
