--- a/app/views/games/new.html.haml
+++ b/app/views/games/new.html.haml
@@ -29,6 +29,8 @@
         = f.submit 'Save & Publish Scores', class: 'medium button', name: 'game[publish]'
         = f.submit 'Save Draft', class: 'medium secondary button'
 
+        = link_to 'Cancel', teams_path, class: 'medium secondary button'
+
 
 :javascript
   $(function() {
