Trigger mailer on new game creation

--- a/app/views/games/edit.html.haml
+++ b/app/views/games/edit.html.haml
@@ -22,7 +22,7 @@
             = f.input :date, as: :string, required: false
 
         #sport_fields
-          = render partial: "games/form", locals: { game: @game }
+          = render partial: 'games/form', locals: { game: @game }
 
         - if @game.published?
           = f.submit 'Update Box Score', class: 'medium button'
