--- a/app/views/games/edit.html.haml
+++ b/app/views/games/edit.html.haml
@@ -27,7 +27,7 @@
         - if @game.published?
           = f.submit 'Update Box Score', class: 'medium button'
         - else
-          = f.submit 'Save & Publish Scores', class: 'medium button', name: 'game[publish]'
+          = f.submit 'Save & Report Scores', class: 'medium button', name: 'game[publish]'
           = f.submit 'Save Draft', class: 'medium secondary button'
 
         = link_to 'Delete Box Score', game_path(@game), method: :delete, class: 'medium secondary button'
