--- a/app/views/games/new.html.haml
+++ b/app/views/games/new.html.haml
@@ -26,7 +26,7 @@
 
         #sport_fields
 
-        = f.submit 'Save & Publish Scores', class: 'medium button', name: 'game[publish]'
+        = f.submit 'Save & Report Scores', class: 'medium button', name: 'game[publish]'
         = f.submit 'Save Draft', class: 'medium secondary button'
 
         = link_to 'Cancel', teams_path, class: 'medium secondary button'
