--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -7,6 +7,12 @@ body.box-score.games {
     margin-bottom: 5px;
   }
 
+  h1.welcome {
+    text-align: center;
+    width: 100%;
+    padding: 0 150px 25px 150px;
+  }
+
   h2 {
     color: #fff;
   }
