--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -71,6 +71,7 @@
           %p.copyright.eight.columns Copyright &copy; #{Date.current.stamp '1999'}, HS Box Scores NYC, LLC. All rights reserved.
           %nav.four.columns
             %ul
+              %li= link_to 'Contact Us', '/contact-us'
               %li= link_to 'Terms of Service', '/terms-of-service'
               %li= link_to 'Privacy Policy', '/privacy-policy'
 
