--- a/app/views/shared/_filter_form.html.haml
+++ b/app/views/shared/_filter_form.html.haml
@@ -1,5 +1,5 @@
 %section#filter-scores
-  %h2 Filter Scores
+  %h2 Search Scores
   = simple_form_for filter, method: :get,
     url: url_for(params.slice(:controller, :action)) do |f|
 
@@ -13,7 +13,7 @@
 
     = f.input :team_id, as: :select, collection: filter.team_options,
       label_method: :display_name, required: false, label: false,
-      input_html: { class: 'chzn-select', data: { placeholder: 'School' } }
+      input_html: { class: 'chzn-select', data: { placeholder: 'Team' } }
 
     = f.input :earliest_date, as: :string, required: false, label: false,
       input_html: { class: 'date' }
