Group League and Team filters by gender

--- a/app/assets/stylesheets/filters.css.scss
+++ b/app/assets/stylesheets/filters.css.scss
@@ -32,7 +32,8 @@ div.input, select {
   margin-right: 12px;
 }
 
-div.input.select {
+div.input.select,
+div.input.grouped_select {
   width: 175px;
 
   .chzn-container {
