--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -20,5 +20,5 @@
 
 :javascript
   $(function() {
-    new BoxScore.Filters($('#filter-scores'), { filter: #{params[:filter].to_json} })
+    new BoxScore.Filters($('#filter-scores'), { filter: #{@filter.params.to_json} })
   });
