--- a/app/views/shared/_filter_form.html.haml
+++ b/app/views/shared/_filter_form.html.haml
@@ -12,7 +12,7 @@
       input_html: { class: 'chzn-select', data: { placeholder: 'League / Division' } }
 
     = f.input :team_id, as: :grouped_select, collection: group_by_gender(filter.team_options),
-      label_method: :display_name, required: false, label: false, group_method: :items, group_label_method: :gender,
+      label_method: :display_name_no_gender, required: false, label: false, group_method: :items, group_label_method: :gender,
       input_html: { class: 'chzn-select', data: { placeholder: 'Team' } }
 
     = f.input :earliest_date, as: :string, required: false, label: false,
