Footer styling nowrap update

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -68,8 +68,8 @@
     .row
       %footer.global.twelve.columns
         .row
-          %p.copyright.eight.columns Copyright &copy; #{Date.current.stamp '1999'}, HS Box Scores NYC, LLC. All rights reserved.
-          %nav.four.columns
+          %p.copyright.seven.columns Copyright &copy; #{Date.current.stamp '1999'} HS Box Scores NYC, LLC. All rights reserved.
+          %nav.five.columns
             %ul
               %li= link_to 'Contact Us', '/contact-us'
               %li= link_to 'Terms of Service', '/terms-of-service'
