--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,6 +32,8 @@
       .row
         .eight.columns.offset-by-four
 
+          = superadmin_dashboard_link
+
           #twitter-button
             = link_to 'Follow @hsboxscoresnyc', 'http://twitter.com/hsboxscoresnyc'
 
