--- a/app/assets/stylesheets/flashes.css.scss
+++ b/app/assets/stylesheets/flashes.css.scss
@@ -2,7 +2,7 @@
 
 #flash {
   z-index: 10;
-  position: static;
+  position: relative;
   width: 100%;
   height: 40px;
   border-bottom: 1px solid $body-background-color;
