--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -94,10 +94,10 @@ body {
 }
 
 a#branding {
-  position: absolute;
+  //position: absolute;
   z-index: 2;
-  left: 150px;
-  top: 10px;
+  //left: 0;
+  //top: 10px;
   display: block;
   width: 335px;
   height: 157px;
@@ -144,6 +144,7 @@ a.superadmin-dashboard {
 
 nav.global {
   text-align: right;
+  white-space: nowrap;
 
   p {
     font-size: 11px;
@@ -184,7 +185,6 @@ nav.global {
 #scores-nav {
   position: relative;
   z-index: 3;
-  margin-top: 80px;
   margin-bottom: 50px;
   padding: 3px;
   border: 1px solid #377393;
